k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mini-platform
  template:
    metadata:
      labels:
        app: mini-platform
    spec:
      containers:
        - name: mini-platform
          image: rahulbansod519/mini-platform:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
