k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-platform-service
spec:
  type: NodePort
  selector:
    app: mini-platform
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
